# mini-ocpp

./: NOTES.md  README.md  demo_central_system.py  demo_cp.py  pyproject.toml
mini_ocpp/: __init__.py  central_system.py  charger_point.py  message_types.py  message_validator.py
schemas/json/: ._Reset.json  ._StartTransaction.json
tests/: test_central_system.py  test_charging_point.py  test_mini_ocpp.py
