[tool.poetry]
name = "mini-ocpp"
version = "0.1.0"
description = ""
authors = ["Nedas Jarmolenka <nedasman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
