[tool.poetry]
name = "mini-ocpp"
version = "1.0.0"
description = ""
authors = ["Nedas Jarmolenka <nedasman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.0"
quart = "^0.19.6"
pytest-describe = "^2.2.0"
jsonschema = "^4.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^24.4.2"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
